--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source> <!-- Changed from 23 to 17 -->
+        <maven.compiler.target>17</maven.compiler.target> <!-- Changed from 23 to 17 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
@@ -21,5 +21,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
